# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
} else if (is_mac) {
  import("//build/config/mac/rules.gni")
} else if (is_ios) {
  import("//build/config/ios/rules.gni")
}

group("p2p") {
  public_deps = [
    ":libp2p",
  ]
}
rtc_shared_library("libp2p") {
  visibility = [ "*" ]
  sources = [
    "base/async_stun_tcp_socket.cc",
    "base/async_stun_tcp_socket.h",
    "base/basic_async_resolver_factory.cc",
    "base/basic_async_resolver_factory.h",
    "base/basic_ice_controller.cc",
    "base/basic_ice_controller.h",
    "base/basic_packet_socket_factory.cc",
    "base/basic_packet_socket_factory.h",
    "base/candidate_pair_interface.h",
    "base/connection.cc",
    "base/connection.h",
    "base/connection_info.cc",
    "base/connection_info.h",
    "base/default_ice_transport_factory.cc",
    "base/default_ice_transport_factory.h",
    "base/dtls_transport.cc",
    "base/dtls_transport.h",
    "base/dtls_transport_factory.h",
    "base/dtls_transport_internal.cc",
    "base/dtls_transport_internal.h",
    "base/ice_controller_factory_interface.h",
    "base/ice_controller_interface.cc",
    "base/ice_controller_interface.h",
    "base/ice_credentials_iterator.cc",
    "base/ice_credentials_iterator.h",
    "base/ice_transport_internal.cc",
    "base/ice_transport_internal.h",
    "base/p2p_constants.cc",
    "base/p2p_constants.h",
    "base/p2p_transport_channel.cc",
    "base/p2p_transport_channel.h",
    "base/p2p_transport_channel_ice_field_trials.h",
    "base/packet_transport_internal.cc",
    "base/packet_transport_internal.h",
    "base/port.cc",
    "base/port.h",
    "base/port_allocator.cc",
    "base/port_allocator.h",
    "base/port_interface.cc",
    "base/port_interface.h",
    "base/pseudo_tcp.cc",
    "base/pseudo_tcp.h",
    "base/regathering_controller.cc",
    "base/regathering_controller.h",
    "base/stun_port.cc",
    "base/stun_port.h",
    "base/stun_request.cc",
    "base/stun_request.h",
    "base/tcp_port.cc",
    "base/tcp_port.h",
    "base/transport_description.cc",
    "base/transport_description.h",
    "base/transport_description_factory.cc",
    "base/transport_description_factory.h",
    "base/transport_info.h",
    "base/turn_port.cc",
    "base/turn_port.h",
    "base/udp_port.h",
    "client/basic_port_allocator.cc",
    "client/basic_port_allocator.h",
    "client/relay_port_factory_interface.h",
    "client/turn_port_factory.cc",
    "client/turn_port_factory.h",
    "../rtc_base/async_tcp_socket.h",
    "../rtc_base/async_tcp_socket.cc",
    "../rtc_base/network/sent_packet.h",
    "../rtc_base/network/sent_packet.cc",
    "../rtc_base/time_utils.h",
    "../rtc_base/time_utils.cc",
    "../api/wrapping_async_dns_resolver.h",
    "../api/wrapping_async_dns_resolver.cc",
    "../rtc_base/async_resolver.h",
    "../rtc_base/async_resolver.cc",
    "../rtc_base/logging.h",
    "../rtc_base/logging.cc",
    "../rtc_base/net_helper.h",
    "../rtc_base/net_helper.cc",
    "../rtc_base/ip_address.h",
    "../rtc_base/ip_address.cc",
    "../rtc_base/network.h",
    "../rtc_base/network.cc",
    "../rtc_base/async_udp_socket.h",
    "../rtc_base/async_udp_socket.cc",
    "../rtc_base/socket_address.h",
    "../rtc_base/socket_address.cc",
    "../rtc_base/socket_adapters.h",
    "../rtc_base/socket_adapters.cc",
    "../api/transport/stun.h",
    "../api/transport/stun.cc",
    "../api/call/transport.h",
    "../api/call/transport.cc",
    "../rtc_base/rate_tracker.h",
    "../rtc_base/rate_tracker.cc",
    "../rtc_base/message_handler.h",
    "../rtc_base/message_handler.cc",
    "../api/candidate.h",
    "../api/candidate.cc",
    "../rtc_base/helpers.h",
    "../rtc_base/helpers.cc",
    "../rtc_base/async_packet_socket.h",
    "../rtc_base/async_packet_socket.cc",
    "../rtc_base/numerics/event_based_exponential_moving_average.h",
    "../rtc_base/numerics/event_based_exponential_moving_average.cc",
    "../logging/rtc_event_log/ice_logger.h",
    "../logging/rtc_event_log/ice_logger.cc",
    "../logging/rtc_event_log/events/rtc_event_ice_candidate_pair_config.h",
    "../logging/rtc_event_log/events/rtc_event_ice_candidate_pair_config.cc",
    "../rtc_base/byte_buffer.h",
    "../rtc_base/byte_buffer.cc",
    "../rtc_base/buffer_queue.h",
    "../rtc_base/buffer_queue.cc",
    "../rtc_base/stream.h",
    "../rtc_base/stream.cc",
    "../api/crypto/crypto_options.h",
    "../api/crypto/crypto_options.cc",
    "../api/rtc_error.h",
    "../api/rtc_error.cc",
    "../rtc_base/thread.h",
    "../rtc_base/thread.cc",
    "../logging/rtc_event_log/events/rtc_event_dtls_transport_state.h",
    "../logging/rtc_event_log/events/rtc_event_dtls_transport_state.cc",
    "../rtc_base/event_tracer.h",
    "../rtc_base/event_tracer.cc",
    "../rtc_base/task_utils/pending_task_safety_flag.h",
    "../rtc_base/task_utils/pending_task_safety_flag.cc",
    "../system_wrappers/include/metrics.h",
    "../system_wrappers/source/metrics.cc",
    "../logging/rtc_event_log/events/rtc_event_dtls_writable_state.h",
    "../logging/rtc_event_log/events/rtc_event_dtls_writable_state.cc",
    "../system_wrappers/include/field_trial.h",
    "../system_wrappers/source/field_trial.cc",
    "../rtc_base/experiments/struct_parameters_parser.h",
    "../rtc_base/experiments/struct_parameters_parser.cc",
    "../rtc_base/proxy_info.h",
    "../rtc_base/proxy_info.cc",
    "../rtc_base/copy_on_write_buffer.h",
    "../rtc_base/copy_on_write_buffer.cc",
    "../rtc_base/async_resolver_interface.h",
    "../rtc_base/async_resolver_interface.cc",
    "../rtc_base/net_helpers.h",
    "../rtc_base/net_helpers.cc",
    "../rtc_base/async_socket.h",
    "../rtc_base/async_socket.cc",
    "../rtc_base/ssl_fingerprint.h",
    "../rtc_base/ssl_fingerprint.cc",
    "../rtc_base/ifaddrs_converter.h",
    "../rtc_base/ifaddrs_converter.cc",
    "../rtc_base/mac_ifaddrs_converter.cc",
    "../rtc_base/crypt_string.h",
    "../rtc_base/crypt_string.cc",
    "../rtc_base/message_digest.h",
    "../rtc_base/message_digest.cc",
    "../rtc_base/deprecated/recursive_critical_section.h",
    "../rtc_base/deprecated/recursive_critical_section.cc",
    "../rtc_base/crc32.h",
    "../rtc_base/crc32.cc",
    "../rtc_base/rtc_certificate.h",
    "../rtc_base/rtc_certificate.cc",
    "../rtc_base/ssl_stream_adapter.h",
    "../rtc_base/ssl_stream_adapter.cc",
    "../rtc_base/network_constants.h",
    "../rtc_base/network_constants.cc",
    "../rtc_base/system_time.h",
    "../rtc_base/system_time.cc",
    "../rtc_base/ssl_adapter.h",
    "../rtc_base/ssl_adapter.cc",
    "../rtc_base/zero_memory.h",
    "../rtc_base/zero_memory.cc",
    "../rtc_base/null_socket_server.h",
    "../rtc_base/null_socket_server.cc",
    "../rtc_base/internal/default_socket_server.h",
    "../rtc_base/internal/default_socket_server.cc",
    "../logging/rtc_event_log/events/rtc_event_ice_candidate_pair.h",
    "../logging/rtc_event_log/events/rtc_event_ice_candidate_pair.cc",
    "../rtc_base/event.h",
    "../rtc_base/event.cc",
    "../rtc_base/platform_thread.h",
    "../rtc_base/platform_thread.cc",
    "../api/rtc_event_log/rtc_event.h",
    "../api/rtc_event_log/rtc_event.cc",
    "../rtc_base/experiments/field_trial_parser.h",
    "../rtc_base/experiments/field_trial_parser.cc",
    "../rtc_base/experiments/field_trial_units.h",
    "../rtc_base/experiments/field_trial_units.cc",
    "../rtc_base/system/cocoa_threading.h",
    "../rtc_base/system/cocoa_threading.mm",
    "../rtc_base/openssl_stream_adapter.h",
    "../rtc_base/openssl_stream_adapter.cc",
    "../rtc_base/openssl_adapter.h",
    "../rtc_base/openssl_adapter.cc",
    "../rtc_base/openssl_digest.h",
    "../rtc_base/openssl_digest.cc",
    "../rtc_base/synchronization/yield_policy.h",
    "../rtc_base/synchronization/yield_policy.cc",
    "../rtc_base/physical_socket_server.h",
    "../rtc_base/physical_socket_server.cc",
    "../rtc_base/boringssl_identity.h",
    "../rtc_base/boringssl_identity.cc",
    "../rtc_base/ssl_identity.h",
    "../rtc_base/ssl_identity.cc",
    "../rtc_base/task_utils/repeating_task.h",
    "../rtc_base/task_utils/repeating_task.cc",
    "../rtc_base/location.h",
    "../rtc_base/location.cc",
    "../api/units/time_delta.h",
    "../api/units/time_delta.cc",
    "../api/units/data_size.h",
    "../api/units/data_size.cc",
    "../system_wrappers/include/clock.h",
    "../system_wrappers/source/clock.cc",
    "../rtc_base/openssl_utility.h",
    "../rtc_base/openssl_utility.cc",
    "../rtc_base/openssl_key_pair.h",
    "../rtc_base/openssl_key_pair.cc",
    "../rtc_base/boringssl_certificate.h",
    "../rtc_base/boringssl_certificate.cc",
    "../rtc_base/openssl_session_cache.h",
    "../rtc_base/openssl_session_cache.cc",
    "../rtc_base/ssl_certificate.h",
    "../rtc_base/ssl_certificate.cc",
    "../rtc_base/third_party/base64/base64.h",
    "../rtc_base/third_party/base64/base64.cc",
    "../rtc_base/third_party/sigslot/sigslot.h",
    "../rtc_base/third_party/sigslot/sigslot.cc",
    "../rtc_base/http_common.h",
    "../rtc_base/http_common.cc",
    "../api/units/data_rate.h",
    "../api/units/data_rate.cc"

    
  ]

  deps = [
    "../rtc_base:callback_list",
    "../rtc_base:checks",
    "../rtc_base:weak_ptr",


  ]
  deps += [ "//third_party/boringssl" ]
  include_dirs = [ "../third_party/boringssl/src/include" ]
  if (is_mac) {
      frameworks = [ "AppKit.framework" ]
  }


}

